css change to fix right sec alignment 30vw to 28vw

--- a/bus_display_cusd/css/style.css
+++ b/bus_display_cusd/css/style.css
@@ -177,7 +177,7 @@ font-weight: bold;
 
 #right_sec{
   height:100%;
-  width:30vw;
+  width:28vw;
   float:right;
   background-color: #33a8db;
 }
